# coturn

./: README.md  simple_jwt_test  simple_jwt_test.c  test_jwt.c  test_token.txt
src/: CMakeLists.txt
src/apps/relay/: CMakeLists.txt  mainrelay.c  mainrelay.h
src/apps/uclient/: CMakeLists.txt  mainuclient.c  startuclient.c  uclient.h
src/client/: ns_turn_msg.h  ns_turn_msg_defs_experimental.h
src/jwt/: CMakeLists.txt  README.md  generate_sample_keys.sh  jwt_integration.h  jwt_integration_simple.c  main.c  public_key.pem  rs256.c  rs256.h
src/server/: CMakeLists.txt  ns_turn_server.c
test_script/: jwt_test.sh  local_test.sh  longterm_client.sh  longterm_server.sh  turn_server_test.sh
